styles.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat:wght@300&display=swap');


/* GLOBAL */

:root {

    scroll-behavior: smooth;
    -webkit-font-smoothing: antialiased;
    font-synthesis: none;
    text-rendering: optimizeLegibility;
    font-family: 'Montserrat', sans-serif;

    --bright-dark-blue:#4D4C53;
    --dark-blue:#2B2A2E;
    --naranja:#FFA500;
    --blanco-tenue:#DAD9DB;
    --blanco-tenue-brillante:#E5EAE9;
    --lila:#4B455B;
    --lila-titulos:#474159;
    --azul-titulos:#313132;
    --white-body:#f2f4f7;



}

a {

    text-decoration: none;

}

body {
    margin: 0;
    padding: 0;
    background: var(--white-body);
    overflow-x: hidden;
}

.li-active{

    background-color: var(--bright-dark-blue);
    border: 0.1px solid var(--naranja);
}



i{

    border-radius: 12px;

}

i:hover{

    color: var(--naranja); /* COLOR PRINCIPAL */
}

.header i:hover{

    color: var(--blanco-tenue-brillante); /* COLOR PRINCIPAL */

}


/* NAVBAR */

.logo {
    padding: 2vw;
}


nav {

    position: relative;
    z-index: 1000;
}

nav ul {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 20vw;
    position: fixed;
    top: 0;
    left: 0;
    background-color: #2B2A2E;
    padding-left: 2%;
    border : 1px solid #676767;

    
}

nav ul li {
    list-style: none;
    
}

nav .container {

    inset: 0;
}


nav ul li a {
    display: block;
    text-decoration: none;
    text-transform: capitalize;
    font-size: 1.5vw;
    color: #fff;
    position: relative;
    padding: 3% 3% 3% 3%;
    transition: all 0.5s;
    font-weight: 300;
}

nav ul li h1 {

    display: block;
    text-decoration: none;
    text-transform: capitalize;
    font-size: 2vw;
    color: #fff;
    position: relative;
    padding: 3% 3% 3% 3%;
    font-weight: 700;
}

nav ul li h2 {

    display: block;
    text-decoration: none;
    text-transform: capitalize;
    font-size: 1vw;
    color: #fff;
    position: relative;
    padding: 1vw 3vw 2vw 1vw;
    margin: 0px;
}

nav ul li a:before {
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    height: 100%;
    background: var(--bright-dark-blue);
    z-index: -1;
    transition: all 1s;
    font-weight: 600;

}

nav ul li a:hover {
    color: white;
}

nav ul li a:hover:before {
    width: 100%;
}

nav ul .fa {

    padding-right: 4vw;
    font-size: 0.73em !important;
}

nav .navbar-items-phone i{

    pointer-events: none;
}

.logo img {

    width: 70%;
    

}

#logo-img{

    border : 1px solid #696969;
    border-width: 0.01px ;
}

.wrapper-nav {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    height: 100%;
}

#sections {
    align-self: start;
    display: flex;
    flex-direction: column;
}

#socialmedia {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    align-self: stretch;
    flex-grow: 1;
    display: flex;
    flex-direction: column-reverse;
    padding-bottom: 1.5vw;

}


.toogle {

    display: none;
}

.toogle-wrapper {
    /* NO necesario */

    margin-left: 0px;
}

.logo .me-4 {

    padding-bottom: 0px !important;
    margin-left: 10% !important;


}




.logo a {

    margin: 5%;
}


.fa {

    font-size: 2vw;
    margin-right: 5%
}


.hidden {

    visibility: hidden;
    opacity: 0;
}



/** BODY **/

/* HEADER */


.header .container-fluid {

    margin: 0px;
    padding: 0px;
}


.header img {
    width: 100%;
    height: 50%;
}

.header {
    position: relative;
    overflow: hidden;
}


.header #header-text {
    position: absolute;
    top: 20%;
    left: 5%;

    color: aliceblue;
}


.header #navbar-toogler {
    display: none;
}

.header #header-text h1 {

    font-size: 4vw;
}

.header #header-text h2 {

    font-size: 2vw;
}

.wrapper {
    margin-left: 20vw;
}


.body {

    padding-top: 2vw;
}

.body h2 {

    font-weight: 700;
    font-size: 2.5vw;
    text-align: center;
    color: var(--azul-titulos);

}



.body h2,
h3 {

    margin-bottom: 5vw;
    
}

.body h3 {

    margin-top: 3vw;
    color: var(--lila-titulos);

}



.wrapper p {
    font-size: 1.5rem !important;
    text-align: justify;
    font-weight: 400;
}

#home section p{

    font-size: 1.1rem !important;
}


/* PORTFOLIO */

#tecnologias-parent{

    margin-bottom: 5vw;

}

#tecnologias-parent .container{

    padding: 4%;
    padding-right: 0% !important;

    
}

#tecnologias-parent h4{

    padding-bottom: 5%;
}

#portfolio .container-md{

    padding: 2%;
    margin: 2%;
    border-radius: 8px;
}

#tecnologias{

    background-color: var(--lila-titulos);
    order: 1;


}

#tecnologias h4{

    color: var(--naranja);
    font-weight: 700;
    font-size: 1.8rem;

}

#tecnologias h5{

    color: var(--blanco-tenue-brillante);
}

#otras{

    order: 2;
    border: 1px solid var(--dark-blue)


}

#otras h4{

    font-weight: 700;
    font-size: 1.8rem;

}

#otras h5{

    color: var(--dark-blue);
}

.container-proyecto{

    border: 1px solid var(--dark-blue);
    margin-bottom: 4%;
    padding: 3%;
    border-radius: 8px;

}

.container-proyecto img{

    padding: 2%;

}

.container-proyecto .img-resize img{

    width: 60%;

}

.container-proyecto h4{

    text-transform: uppercase;
    font-weight: 700;
    margin-bottom: 3%;
    

}

.container-proyecto h5{

    font-weight: 400;
   
    

}


.container-text{

    padding-top: 2%;
    text-align: justify;

}

.container-button{

    margin: 8%;
}

.container-button button{

    margin: 1%;
    background-color: var(--lila);
    color: white;
    border: none;
    font-size: 1.25rem;
}

.container-button button:hover{

   background-color: var(--dark-blue);
}

.container-button button:active{

    background-color: var(--bright-dark-blue) !important;
    border-color: var(--bright-dark-blue) !important;
 }

/* FOOTER */



/* MEDIA QUERIES */

@media (max-width:990px) {



    nav {

        -webkit-transition: all 0.2s;
        transition: all 0.2s;


    }

    nav ul {

        width: 60svw;
        padding-left: 3vw;
        padding-right: 3vw;
        border : 1px solid #676767;
    }

    .navbar-items-phone {


        border: 1px solid rgb(72, 73, 83);
        border-radius: 8px;
        padding-top: 2vw;
        padding-bottom: 2vw;
        padding-left: 6vw;
        margin-right: 1vw;

    }



    nav ul li a {

        font-size: 5svw;
    }

    nav ul li h1 {

        font-size: 7vw;
    }

    nav ul li h2 {

        font-size: 5vw;
        margin-bottom: 10vw;
    }

    .wrapper {

        margin-left: 0px;
    }


    .header {

        width: 100svw;
    }

    #header-text {

        padding-right: 0px;
    }

    .header #header-text h1 {

        font-size: 5.5vw;
        margin-bottom: 0px;
    }

    .header #header-text h2 {

        font-size: 3.5vw;
    }

    .header #navbar-toogler {
        display: block;
        position: absolute;
        top: 60%;
        right: 5%;

        color: aliceblue;
    }

    #socialmedia {

        padding-bottom: 4vw;
    }

    .body h2 {

        font-size: 6vw;

    }

    .body h3 {

        font-size: 5vw;
        margin-top: 10%;
        margin-bottom: 7%;
    }

    #portfolio p{
        
        font-size: 3.5vw !important;

    }

    #tecnologias-parent{

        flex-direction: column !important;
    }

    #tecnologias{

        margin-bottom: 8% !important;
        padding-left: 5% !important;

    }

    #otras{

        margin-bottom: 8% !important;

    }

    .container-proyecto{

        flex-direction: column !important;
        padding-right: 0% !important;
        padding-left: 0% !important;
        margin-bottom: 15%;


    }

    .container-text{

        order: 2;
        padding:5%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }

    .container-img{

        order: 1;
        margin-bottom: 4%;
        padding-top: 3%;
        padding-bottom: 3%;


    }
    .container-button{

        flex-direction: column;
        margin-bottom: 0px !important;
    }

    .container-button button{

        margin-bottom: 2%;
    }



}

@media (min-width:991px) {

    .logo a {

        display: none;
    }
}

@media (max-width:380px) {


    .me-4 {

        margin-right: 10px !important;
    }
}

